🐛 fix: resolve Qodana static analysis warnings
- Replace System.getProperty("path.separator") with File.pathSeparator
- Remove unused variables, imports, and redundant @SuppressWarnings
- Simplify lambda expressions to method references
- Remove dead code (unused helpers, identical method overrides)
- Use Math.clamp instead of manual min/max
- Fix empty switch body and redundant local variables